<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/startGameButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen"
        android:padding="@dimen/base_dimen"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/selectTestButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen"
        android:padding="@dimen/base_dimen"
        android:text="@string/select_test" />

    <Button
        android:id="@+id/objButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen"
        android:padding="@dimen/base_dimen"
        android:text="@string/obj_viewer" />

    <Button
        android:id="@+id/aboutButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen"
        android:padding="@dimen/base_dimen"
        android:text="@string/about" />

    <Button
        android:id="@+id/exitButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen"
        android:padding="@dimen/base_dimen"
        android:text="@string/exit" />

</LinearLayout>